@@ -1,39 +1,4 @@
 name    = Plack-App-ServiceStatus
-author  = Thomas Klausner <domm@cpan.org>
-license = Perl_5
-copyright_holder = Thomas Klausner
-copyright_year   = 2016
+copyright_year   = 2016 - 2021
 
-[GatherDir]
-include_dotfiles = 1
-exclude_match = local
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
-[Readme]
-[ExecDir]
-[ShareDir]
-[Repository]
-
-[MetaResources]
-
-[CheckChangeLog]
-
-[Manifest]
-
-[TestRelease]
-[ConfirmRelease]
-
-[AutoPrereqs]
-skip = ^testlib
-
-[VersionFromModule]
-[ModuleBuild]
-[PodWeaver]
-
-[InstallGuide]
-[MetaJSON]
-
-[@Git]
-
+[@Author::DOMM]
