@@ -1,11 +1,12 @@
 package Plack::App::ServiceStatus::Elasticsearch;
+
+# ABSTRACT: Check Elasticsearch connection
+
+# VERSION
+
 use 5.018;
 use strict;
 use warnings;
-
-our $VERSION = '0.900';
-
-# ABSTRACT: Check Elasticsearch connection
 
 sub check {
     my ( $class, $es ) = @_;
