@@ -1,11 +1,12 @@
 package Plack::App::ServiceStatus::Redis;
+
+# ABSTRACT: Check Redis connection
+
+# VERSION
+
 use 5.018;
 use strict;
 use warnings;
-
-our $VERSION = '0.900';
-
-# ABSTRACT: Check Redis connection
 
 sub check {
     my ( $class, $redis ) = @_;
